# ebpf_demo

./: go.mod  hello_bpfeb.go  hello_bpfel.go  main.go
c/: CMakeLists.txt  common.h  hello_kern.c
c/cpudist/: cpudist.c
c/event_array/: event_array.c
c/hash_map/: hash_map.c
c/hello/: hello_kern.c
c/include/: common.h  vmlinux.h
c/kprobe/: kprobe.c
c/memory/: memory.c
c/net/: net.c
c/offcpu/: offcpu.c
c/offcputime/: offcputime.c
c/ring_buffer/: ring_buffer.c
c/stack/: stack.c
cpudist/: main.go
event_array/: main.go
hash_map/: main.go
hello_world/: main.go
kprobe/: main.go
memory/: main.go
net/: main.go
offcpu/: main.go
offcputime/: main.go  procsyms.go
ring_buffer/: main.go
stack/: kallsyms.go  main.go  procsyms.go  type.go
